# QT

./: CMakeLists.txt  README.md  academicmanager.cpp  academicmanager.hpp  circularprogress.cpp  course.cpp  course.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  person.hpp  school_system.db  student.hpp  teacher.hpp  timer.cpp  timer.hpp
